--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,2 +1,28 @@
-<h1> Hello from the new Article template</h1>
+<h1>Create new Articles with Forms</h1>
+
+<%= form_for :article, url: articles_path do |f| %>
+
+    // added url: article_path to submit to the path of article//
+
+
+
+<p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+</p>
+
+
+ <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+</p>
+
+<p>
+    <%= f.submit %>
+</p>
+
+<% end %>
+
+
+
 
